<resources>
    <string name="app_name">TarefaGuru</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Prototipo">TarefaGuru</string>
    <string name="place_holder_nome">Nome</string>
    <string name="place_holder_telemovel">Telemóvel</string>
    <string name="place_holder_morada">Morada</string>
    <string name="place_holder_nif">NIF</string>
    <string name="observa_es">Observações</string>
    <string name="pago">Pago</string>
    <string name="take_photo">Tirar Foto</string>
    <string name="start_capture">Começar captura</string>
    <string name="contrato">Contrato</string>
    <string name="informa_es_adicionais">Informações Adicionais</string>
    <string name="informa_es_principais">Informações Principais</string>
    <string name="ativo">Ativo</string>
    <string name="guardar">Guardar</string>
</resources>